Fixed: Navbar overlapping Diva demo in fullscreen

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3823,7 +3823,6 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-static-top {
-  z-index: 1000;
   border-width: 0 0 1px;
 }
 @media (min-width: 768px) {
